<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/playa7"
    android:orientation="vertical"
    tools:context="com.example.sauld.appconocemipais.Activities.Registro_Activity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:background="#50FFFFFF">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarR"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            />

    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp">

            <LinearLayout
                android:id="@+id/linearlayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="80dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp">

                    <EditText
                        android:id="@+id/editNom"
                        style="@style/edittext"
                        android:layout_width="match_parent"
                        android:layout_marginTop="30dp"
                        android:hint="@string/nombre" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputFoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp">

                    <EditText
                        android:id="@+id/editApell"
                        style="@style/edittext"
                        android:layout_width="match_parent"
                        android:hint="@string/apellido" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp">

                    <EditText
                        android:id="@+id/editEmailR"
                        style="@style/edittext"
                        android:layout_width="match_parent"
                        android:hint="@string/email" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputPassR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp">

                    <EditText
                        android:id="@+id/editPassR"
                        style="@style/edittext"
                        android:layout_width="match_parent"
                        android:hint="@string/contrase"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/bordeedit"
                    android:text="@string/registrar"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="50dp"
                    android:background="#99FFFFFF"></View>
            </LinearLayout>

            <Button
                android:id="@+id/btnIngresar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/bordeedit"
                android:text="@string/ingresa"
                android:textColor="#000"
                android:textStyle="bold" />
        </FrameLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
