<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/playa5"
    tools:context="com.example.sauld.appconocemipais.Activities.Login_activity">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#50FFFFFF"
      >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="70dp"
                android:layout_marginTop="0dp"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp">

                    <EditText
                        android:id="@+id/editEmail"
                        style="@style/edittext"
                        android:layout_width="match_parent"
                        android:drawableLeft="@drawable/ic_person_white_24dp"
                        android:hint="@string/email" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp">

                    <EditText
                        android:id="@+id/editPass"
                        style="@style/edittext"
                        android:layout_width="match_parent"
                        android:drawableLeft="@drawable/ic_lock_white_24dp"
                        android:hint="@string/contrase"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/bordeedit"
                    android:gravity="end|center"
                    android:text="Recuerdame"
                    android:textColor="#000" />

                <Button
                    android:id="@+id/btnIngresar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/bordeedit"
                    android:text="@string/ingresa"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                   android:layout_marginTop="100dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#99FFFFFF"></View>


            </LinearLayout>

            <Button
                android:id="@+id/btnRegistro"

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/bordeedit"
                android:text="@string/registrar"
                android:textColor="#000"
                android:textStyle="bold" />
        </FrameLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
